# pkm-briefing-bot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  Procfile  README.ko.md  README.md  ROADMAP.md  briefing_composer.py  config.example.yaml  config.py  install.sh  knowledge_scanner.py  main.py  meta_reviewer.py  pyproject.toml  railway.json  requirements.txt  setup_wizard.py  summarizer.py
core/: __init__.py  scanner.py  summarizer.py
prompts/en/: dream_enrich.txt  entity_extract.txt  intent_classify.txt  thought_capture.txt  weekly_knowledge.txt
prompts/ko/: dream_enrich.txt  entity_extract.txt  intent_classify.txt  thought_capture.txt  weekly_knowledge.txt
scripts/: install-hooks.sh
src/compound_agent/: __init__.py  agent_state.py  brain.py  briefing_composer.py  calendar_client.py  config.py  dashboard.py  email_sender.py  evolution.py  gmail_client.py  hands.py  knowledge_scanner.py  main.py  memory.py  meta_reviewer.py  notifications.py  services.py  setup_wizard.py  summarizer.py  telegram_handler.py  telegram_sender.py  trend_fetcher.py  vault_search.py
src/compound_agent/agents/: __init__.py  analyst.py  base.py  curator.py  orchestrator.py  researcher.py  writer.py
tests/: test_agent_state.py  test_analyst.py  test_base_agent.py  test_brain.py  test_curator.py  test_dashboard.py  test_event_log.py  test_evolution.py  test_hands.py  test_integration_multiagent.py  test_memory.py  test_notifications.py  test_orchestrator.py  test_researcher.py  test_vault_search.py  test_writer.py
(+26 files in other folders)
